--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -163,7 +163,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Pawns
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1003,8 +1003,8 @@ SteamVREditor.TimeStamp=2021.02.20-18.03.20
 SteamVREditor.LastCompileMethod=External
 VirtualTexturingEditor.TimeStamp=2021.02.20-17.10.34
 VirtualTexturingEditor.LastCompileMethod=External
-ExternalImagePicker.TimeStamp=2020.06.03-16.31.46
-ExternalImagePicker.LastCompileMethod=Unknown
+ExternalImagePicker.TimeStamp=2021.02.20-17.10.13
+ExternalImagePicker.LastCompileMethod=External
 HierarchicalLODUtilities.TimeStamp=2020.06.03-16.32.01
 HierarchicalLODUtilities.LastCompileMethod=Unknown
 Voice.TimeStamp=2021.02.20-17.10.34
@@ -1055,6 +1055,8 @@ InternationalizationSettings.TimeStamp=2021.02.20-17.10.16
 InternationalizationSettings.LastCompileMethod=Unknown
 ToonTanks.TimeStamp=2021.07.08-17.03.26
 ToonTanks.LastCompileMethod=Runtime
+BlueprintGraph.TimeStamp=2021.02.20-17.10.07
+BlueprintGraph.LastCompileMethod=Unknown
 
 [MRU]
 MRUItem0=/Game/Maps/Main
@@ -1095,7 +1097,9 @@ FloorScale=1.000000
 FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Pawns/BP_PawnTank.BP_PawnTank
+OpenAssetsAtExit=/Game/Blueprints/Pawns/BP_PawnTurret.BP_PawnTurret
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1543,6 +1547,44 @@ EditorKeyboardShortcutSettings.BlueprintLibraryPalette=True
 EditorKeyboardShortcutSettings.MyBlueprint=True
 EditorKeyboardShortcutSettings.BlueprintPalette=True
 EditorKeyboardShortcutSettings.SCSEditorViewport=True
+BP_PawnTurret_C.Tick=True
+BP_PawnTurret_C.Pawn=True
+BP_PawnTurret_C.Camera=True
+BP_PawnTurret_C.Replication=True
+BP_PawnTurret_C.Rendering=True
+BP_PawnTurret_C.Collision=True
+BP_PawnTurret_C.Actor=True
+BP_PawnTurret_C.Input=True
+SpringArmComponent.Variable=True
+SpringArmComponent.TransformCommon=True
+SpringArmComponent.Sockets=True
+SpringArmComponent.Camera=True
+SpringArmComponent.CameraCollision=True
+SpringArmComponent.CameraSettings=True
+SpringArmComponent.ComponentTick=True
+SpringArmComponent.Lag=True
+SpringArmComponent.Rendering=True
+SpringArmComponent.Tags=True
+SpringArmComponent.ComponentReplication=True
+SpringArmComponent.Activation=True
+SpringArmComponent.Cooking=True
+SpringArmComponent.Events=True
+CameraComponent.Variable=True
+CameraComponent.TransformCommon=True
+CameraComponent.Sockets=True
+CameraComponent.CameraSettings=True
+CameraComponent.CameraOptions=True
+CameraComponent.Camera=True
+CameraComponent.PostProcess=True
+CameraComponent.ComponentTick=True
+CameraComponent.Lens=True
+CameraComponent.Color Grading=True
+CameraComponent.Rendering Features=True
+CameraComponent.Tags=True
+CameraComponent.ComponentReplication=True
+CameraComponent.Activation=True
+CameraComponent.Cooking=True
+CameraComponent.Events=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1603,4 +1645,40 @@ EditorLoadingSavingSettings=True
 SourceCodeAccessSettings=True
 EditorPerformanceSettings=True
 EditorPerProjectUserSettings=True
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bFavorPureCastNodes=False
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+Bookmarks=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+bShowDetailedCompileResults=False
+CompileEventDisplayThresholdMs=5
+NodeTemplateCacheCapMB=20.000000
 
