--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1056,7 +1056,7 @@ AudioSynesthesiaEditor.TimeStamp=2021.02.20-18.00.06
 AudioSynesthesiaEditor.LastCompileMethod=Unknown
 InternationalizationSettings.TimeStamp=2021.02.20-17.10.16
 InternationalizationSettings.LastCompileMethod=Unknown
-ToonTanks.TimeStamp=2021.07.09-17.17.45
+ToonTanks.TimeStamp=2021.07.11-09.39.28
 ToonTanks.LastCompileMethod=Runtime
 BlueprintGraph.TimeStamp=2021.02.20-17.10.07
 BlueprintGraph.LastCompileMethod=Unknown
@@ -1100,8 +1100,7 @@ FloorScale=1.000000
 FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [AssetEditorSubsystem]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/Blueprints/Pawns/BP_PawnTurret.BP_PawnTurret
+CleanShutdown=False
 OpenAssetsAtExit=/Game/Blueprints/Pawns/BP_PawnTank.BP_PawnTank
 
 [DetailCategories]
@@ -1638,6 +1637,15 @@ BP_PawnTank_C.Tags=True
 BP_PawnTank_C.Cooking=True
 BP_PawnTank_C.VirtualTexture=True
 BP_PawnTank_C.Activation=True
+BP_PawnTank_C.HLOD=True
+BP_PawnTank_C.Mobile=True
+BP_PawnTank_C.AssetUserData=True
+BP_PawnTank_C.MaterialParameters=True
+Blueprint.ClassOptions=True
+Blueprint.BlueprintOptions=True
+Blueprint.Interfaces=True
+Blueprint.Packaging=True
+Blueprint.Thumbnail=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1645,13 +1653,17 @@ EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Obj
 Object=
 CrashReportsPrivacySettings="\"Object.Options.bSendUnattendedBugReports\" "
 AnalyticsPrivacySettings="\"Object.Options.bSendUsageData\" "
+BP_PawnTank_C="\"Object.Components.CapsuleComp.Object.Shape.ShapeColor\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.CapsuleComp.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.BaseMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Lighting.LightmassSettings\" \"Object.Components.BaseMesh.Object.Lighting.LightingChannels\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.TurretMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.TurretMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.TurretMesh.Object.Lighting.LightmassSettings\" \"Object.Components.TurretMesh.Object.Lighting.LightingChannels\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PawnBase="\"Object.Components.CapsuleComp.Object.Shape.ShapeColor\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.CapsuleComp.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.BaseMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Lighting.LightmassSettings\" \"Object.Components.BaseMesh.Object.Lighting.LightingChannels\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.TurretMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.TurretMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.TurretMesh.Object.Lighting.LightmassSettings\" \"Object.Components.TurretMesh.Object.Lighting.LightingChannels\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+Pawn="\"Object.Components.CapsuleComp.Object.Shape.ShapeColor\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.CapsuleComp.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.BaseMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Lighting.LightmassSettings\" \"Object.Components.BaseMesh.Object.Lighting.LightingChannels\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.TurretMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.TurretMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.TurretMesh.Object.Lighting.LightmassSettings\" \"Object.Components.TurretMesh.Object.Lighting.LightingChannels\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PawnTank="\"Object.Components.CapsuleComp.Object.Shape.ShapeColor\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.CapsuleComp.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.BaseMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Lighting.LightmassSettings\" \"Object.Components.BaseMesh.Object.Lighting.LightingChannels\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.TurretMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.TurretMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.TurretMesh.Object.Lighting.LightmassSettings\" \"Object.Components.TurretMesh.Object.Lighting.LightingChannels\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [MessageLog]
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Pawns/BP_PawnTurret
-MRUItem1=/Game/Blueprints/Pawns/BP_PawnTank
+MRUItem0=/Game/Blueprints/Pawns/BP_PawnTank
+MRUItem1=/Game/Blueprints/Pawns/BP_PawnTurret
 MRUItem2=/Game/Assets/Effects/P_HitEffect
 MRUItem3=/Game/Assets/Effects/P_DeathEffect
 
@@ -1821,6 +1833,8 @@ TcpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 TemplateSequenceEditorSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Fire,
 UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Fire,
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Fire,
+BP_PawnTank_C=BP_PawnTank_C.Physics.ConstraintsGroup,BP_PawnTank_C.Rendering.TextureStreaming,BP_PawnTank_C.Rendering.RayTracing,BP_PawnTank_C.Rendering.LOD,
+CapsuleComponent=
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/Pawns/BP_PawnTank.BP_PawnTank=0
