--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -95,12 +95,14 @@ ServerMapNameOverride=
 AdditionalServerLaunchParameters=
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
 bUseNonRealtimeAudioDevice=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=43,Y=4)
 bShowServerDebugDrawingByDefault=True
 ServerDebugDrawingColorTintStrength=0.000000
 ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 ServerFixedFPS=0
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=694)
+NewWindowHeight=694
+MultipleInstancePositions=(X=43,Y=4)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
@@ -164,7 +166,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Classes_Game/ToonTanks/Pawns
+ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Pawns
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1056,7 +1058,7 @@ AudioSynesthesiaEditor.TimeStamp=2021.02.20-18.00.06
 AudioSynesthesiaEditor.LastCompileMethod=Unknown
 InternationalizationSettings.TimeStamp=2021.02.20-17.10.16
 InternationalizationSettings.LastCompileMethod=Unknown
-ToonTanks.TimeStamp=2021.07.11-09.39.28
+ToonTanks.TimeStamp=2021.07.12-15.13.00
 ToonTanks.LastCompileMethod=Runtime
 BlueprintGraph.TimeStamp=2021.02.20-17.10.07
 BlueprintGraph.LastCompileMethod=Unknown
@@ -1646,6 +1648,11 @@ Blueprint.BlueprintOptions=True
 Blueprint.Interfaces=True
 Blueprint.Packaging=True
 Blueprint.Thumbnail=True
+BP_PawnTank_C.Component=True
+BP_PawnTank_C.ComponentTick=True
+BP_PawnTank_C.ComponentReplication=True
+BP_PawnTank_C.Variable=True
+BP_PawnTank_C.Movement=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1842,4 +1849,7 @@ CapsuleComponent=
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Pawns/BP_PawnTank.BP_PawnTank;
+
+[SuppressableDialogs]
+Warning_ReparentTitle=False
 
