--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -100,7 +100,7 @@ bShowServerDebugDrawingByDefault=True
 ServerDebugDrawingColorTintStrength=0.000000
 ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 ServerFixedFPS=0
-LastSize=(X=1280,Y=694)
+LastSize=(X=0,Y=0)
 NewWindowHeight=694
 MultipleInstancePositions=(X=43,Y=4)
 
@@ -166,7 +166,7 @@ ContentBrowserTab1.ActiveTypeFilters=
 ContentBrowserTab1.EnabledTypeFilters=
 ContentBrowserTab1.ActiveFrontendFilters=
 ContentBrowserTab1.EnabledFrontendFilters=
-ContentBrowserTab1.SelectedPaths=/Game/Blueprints/Pawns
+ContentBrowserTab1.SelectedPaths=/Classes_Game/ToonTanks/Pawns
 ContentBrowserTab1.Favorites.SelectedPaths=
 FavoritePaths=
 ContentBrowserTab1.CollectionsExpanded=True
@@ -1058,7 +1058,7 @@ AudioSynesthesiaEditor.TimeStamp=2021.02.20-18.00.06
 AudioSynesthesiaEditor.LastCompileMethod=Unknown
 InternationalizationSettings.TimeStamp=2021.02.20-17.10.16
 InternationalizationSettings.LastCompileMethod=Unknown
-ToonTanks.TimeStamp=2021.07.12-15.13.00
+ToonTanks.TimeStamp=2021.07.13-08.38.21
 ToonTanks.LastCompileMethod=Runtime
 BlueprintGraph.TimeStamp=2021.02.20-17.10.07
 BlueprintGraph.LastCompileMethod=Unknown
@@ -1103,6 +1103,7 @@ FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [AssetEditorSubsystem]
 CleanShutdown=False
+OpenAssetsAtExit=/Game/Blueprints/Pawns/BP_PawnTurret.BP_PawnTurret
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -1652,6 +1653,29 @@ BP_PawnTank_C.ComponentTick=True
 BP_PawnTank_C.ComponentReplication=True
 BP_PawnTank_C.Variable=True
 BP_PawnTank_C.Movement=True
+BP_PawnTank_C.CameraSettings=True
+BP_PawnTank_C.CameraOptions=True
+BP_PawnTank_C.CameraCollision=True
+BP_PawnTank_C.Lag=True
+BP_PawnTank_C.PostProcess=True
+BP_PawnTank_C.Lens=True
+BP_PawnTank_C.Color Grading=True
+BP_PawnTank_C.Rendering Features=True
+BP_PawnTurret_C.TransformCommon=True
+BP_PawnTurret_C.StaticMesh=True
+BP_PawnTurret_C.Materials=True
+BP_PawnTurret_C.Shape=True
+BP_PawnTurret_C.Navigation=True
+BP_PawnTurret_C.Physics=True
+BP_PawnTurret_C.Lighting=True
+BP_PawnTurret_C.Tags=True
+BP_PawnTurret_C.Cooking=True
+BP_PawnTurret_C.VirtualTexture=True
+BP_PawnTurret_C.Activation=True
+BP_PawnTurret_C.ComponentTick=True
+BP_PawnTurret_C.ComponentReplication=True
+BP_PawnTurret_C.Variable=True
+BP_PawnTurret_C.Combat=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1663,13 +1687,15 @@ BP_PawnTank_C="\"Object.Components.CapsuleComp.Object.Shape.ShapeColor\" \"Objec
 PawnBase="\"Object.Components.CapsuleComp.Object.Shape.ShapeColor\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.CapsuleComp.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.BaseMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Lighting.LightmassSettings\" \"Object.Components.BaseMesh.Object.Lighting.LightingChannels\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.TurretMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.TurretMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.TurretMesh.Object.Lighting.LightmassSettings\" \"Object.Components.TurretMesh.Object.Lighting.LightingChannels\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 Pawn="\"Object.Components.CapsuleComp.Object.Shape.ShapeColor\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.CapsuleComp.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.BaseMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Lighting.LightmassSettings\" \"Object.Components.BaseMesh.Object.Lighting.LightingChannels\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.TurretMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.TurretMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.TurretMesh.Object.Lighting.LightmassSettings\" \"Object.Components.TurretMesh.Object.Lighting.LightingChannels\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 PawnTank="\"Object.Components.CapsuleComp.Object.Shape.ShapeColor\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.CapsuleComp.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.BaseMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Lighting.LightmassSettings\" \"Object.Components.BaseMesh.Object.Lighting.LightingChannels\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.TurretMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.TurretMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.TurretMesh.Object.Lighting.LightmassSettings\" \"Object.Components.TurretMesh.Object.Lighting.LightingChannels\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+BP_PawnTurret_C="\"Object.Components.CapsuleComp.Object.Shape.ShapeColor\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.CapsuleComp.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.BaseMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Lighting.LightmassSettings\" \"Object.Components.BaseMesh.Object.Lighting.LightingChannels\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.TurretMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.TurretMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.TurretMesh.Object.Lighting.LightmassSettings\" \"Object.Components.TurretMesh.Object.Lighting.LightingChannels\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+PawnTurret="\"Object.Components.CapsuleComp.Object.Shape.ShapeColor\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance\" \"Object.Components.CapsuleComp.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.CapsuleComp.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.BaseMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.BaseMesh.Object.Lighting.LightmassSettings\" \"Object.Components.BaseMesh.Object.Lighting.LightingChannels\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance\" \"Object.Components.BaseMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" \"Object.Components.TurretMesh.Object.Rendering.WireframeColorOverride\" \"Object.Components.TurretMesh.Object.Rendering.CustomPrimitiveData\" \"Object.Components.TurretMesh.Object.Lighting.LightmassSettings\" \"Object.Components.TurretMesh.Object.Lighting.LightingChannels\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance\" \"Object.Components.TurretMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [MessageLog]
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Pawns/BP_PawnTank
-MRUItem1=/Game/Blueprints/Pawns/BP_PawnTurret
+MRUItem0=/Game/Blueprints/Pawns/BP_PawnTurret
+MRUItem1=/Game/Blueprints/Pawns/BP_PawnTank
 MRUItem2=/Game/Assets/Effects/P_HitEffect
 MRUItem3=/Game/Assets/Effects/P_DeathEffect
 
@@ -1847,6 +1873,7 @@ CapsuleComponent=
 /Game/Blueprints/Pawns/BP_PawnTurret.BP_PawnTurret=0
 
 [PlacementMode]
+RecentlyPlaced=/Game/Blueprints/Pawns/BP_PawnTurret.BP_PawnTurret;
 RecentlyPlaced=/Game/Blueprints/Pawns/BP_PawnTank.BP_PawnTank;
 
 [SuppressableDialogs]
