# AI Turret Fire Mechanic Updated - Now checkes whether the Player is Valid/Alive - Also checkes the DIstance between the Player and Self

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -1058,7 +1058,7 @@ AudioSynesthesiaEditor.TimeStamp=2021.02.20-18.00.06
 AudioSynesthesiaEditor.LastCompileMethod=Unknown
 InternationalizationSettings.TimeStamp=2021.02.20-17.10.16
 InternationalizationSettings.LastCompileMethod=Unknown
-ToonTanks.TimeStamp=2021.07.13-08.38.21
+ToonTanks.TimeStamp=2021.07.13-09.34.58
 ToonTanks.LastCompileMethod=Runtime
 BlueprintGraph.TimeStamp=2021.02.20-17.10.07
 BlueprintGraph.LastCompileMethod=Unknown
@@ -1676,6 +1676,9 @@ BP_PawnTurret_C.ComponentTick=True
 BP_PawnTurret_C.ComponentReplication=True
 BP_PawnTurret_C.Variable=True
 BP_PawnTurret_C.Combat=True
+BP_PawnTurret_C.HLOD=True
+BP_PawnTurret_C.MaterialParameters=True
+BP_PawnTurret_C.Mobile=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1867,6 +1870,7 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Fire,
 BP_PawnTank_C=BP_PawnTank_C.Physics.ConstraintsGroup,BP_PawnTank_C.Rendering.TextureStreaming,BP_PawnTank_C.Rendering.RayTracing,BP_PawnTank_C.Rendering.LOD,
 CapsuleComponent=
+BP_PawnTurret_C=BP_PawnTurret_C.Physics.ConstraintsGroup,BP_PawnTurret_C.Rendering.TextureStreaming,BP_PawnTurret_C.Rendering.RayTracing,BP_PawnTurret_C.Rendering.LOD,
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/Pawns/BP_PawnTank.BP_PawnTank=0
