# Projectiles Now Spawn - Basic Spawn - InitialLifeSpan does NOT work properly yet - Initial and Max Speed work

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -100,7 +100,7 @@ bShowServerDebugDrawingByDefault=True
 ServerDebugDrawingColorTintStrength=0.000000
 ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 ServerFixedFPS=0
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=694)
 NewWindowHeight=694
 MultipleInstancePositions=(X=43,Y=4)
 
@@ -127,7 +127,6 @@ SelectedSplinePointSizeAdjustment=0.000000
 SplineLineThicknessAdjustment=0.000000
 SplineTangentHandleSizeAdjustment=0.000000
 SplineTangentScale=1.000000
-CurrentPosGridSize=1
 
 [EditorStartup]
 LastLevel=/Game/Maps/Main
@@ -1060,7 +1059,7 @@ AudioSynesthesiaEditor.TimeStamp=2021.02.20-18.00.06
 AudioSynesthesiaEditor.LastCompileMethod=Unknown
 InternationalizationSettings.TimeStamp=2021.02.20-17.10.16
 InternationalizationSettings.LastCompileMethod=Unknown
-ToonTanks.TimeStamp=2021.07.21-18.08.58
+ToonTanks.TimeStamp=2021.07.23-09.15.54
 ToonTanks.LastCompileMethod=Runtime
 BlueprintGraph.TimeStamp=2021.02.20-17.10.07
 BlueprintGraph.LastCompileMethod=Unknown
@@ -1106,7 +1105,9 @@ FloorScale=1.000000
 FloorScale3D=(X=1.000000,Y=1.000000,Z=1.000000)
 
 [AssetEditorSubsystem]
-CleanShutdown=False
+CleanShutdown=True
+OpenAssetsAtExit=/Game/Blueprints/Pawns/BP_PawnTank.BP_PawnTank
+OpenAssetsAtExit=/Game/Blueprints/Pawns/BP_PawnTurret.BP_PawnTurret
 OpenAssetsAtExit=/Game/Blueprints/Actors/BP_ProjectileBase.BP_ProjectileBase
 
 [DetailCategories]
@@ -1747,6 +1748,16 @@ BP_ProjectileBase_C.Variable=True
 BP_ProjectileBase_C.Cooking=True
 BP_ProjectileBase_C.Navigation=True
 BP_ProjectileBase_C.VirtualTexture=True
+BP_PawnTank_C.Projectile Type=True
+BP_PawnTurret_C.Projectile Type=True
+StaticMeshComponent.MaterialParameters=False
+StaticMeshComponent.HLOD=False
+StaticMeshComponent.Mobile=False
+StaticMeshComponent.AssetUserData=False
+BP_PawnTank_C.LOD=True
+BP_ProjectileBase_C.MaterialParameters=True
+BP_ProjectileBase_C.HLOD=True
+BP_ProjectileBase_C.Mobile=True
 
 [DetailPropertyExpansion]
 Brush="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -1763,13 +1774,20 @@ PawnTurret="\"Object.Components.CapsuleComp.Object.Shape.ShapeColor\" \"Object.C
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[8]\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
+StaticMeshComponent="\"Object.Collision.BodyInstance\" "
+MeshComponent="\"Object.Collision.BodyInstance\" "
+PrimitiveComponent=
+SceneComponent=
+ActorComponent=
+BP_ProjectileBase_C="\"Object.Components.ProjectileMesh.Object.Lighting.LightmassSettings\" \"Object.Components.ProjectileMesh.Object.Collision.BodyInstance\" \"Object.Components.ProjectileMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
+ProjectileBase="\"Object.Components.ProjectileMesh.Object.Lighting.LightmassSettings\" \"Object.Components.ProjectileMesh.Object.Collision.BodyInstance\" \"Object.Components.ProjectileMesh.Object.Collision.BodyInstance.WalkableSlopeOverride\" "
 
 [MessageLog]
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Actors/BP_ProjectileBase
-MRUItem1=/Game/Blueprints/Pawns/BP_PawnTank
+MRUItem0=/Game/Blueprints/Pawns/BP_PawnTank
+MRUItem1=/Game/Blueprints/Actors/BP_ProjectileBase
 MRUItem2=/Game/Blueprints/Pawns/BP_PawnTurret
 MRUItem3=/Game/Assets/Effects/P_HitEffect
 MRUItem4=/Game/Assets/Effects/P_DeathEffect
@@ -2008,10 +2026,13 @@ BP_PawnTank_C=BP_PawnTank_C.Physics.ConstraintsGroup,BP_PawnTank_C.Rendering.Tex
 CapsuleComponent=
 BP_PawnTurret_C=
 RawInputSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.RotateTurret,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,
+StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Rendering.RayTracing,
+BP_ProjectileBase_C=BP_ProjectileBase_C.Physics.ConstraintsGroup,BP_ProjectileBase_C.Rendering.TextureStreaming,BP_ProjectileBase_C.Rendering.RayTracing,BP_ProjectileBase_C.Rendering.LOD,
 
 [AssetEditorToolkitTabLocation]
 /Game/Blueprints/Pawns/BP_PawnTank.BP_PawnTank=0
 /Game/Blueprints/Pawns/BP_PawnTurret.BP_PawnTurret=0
+/Game/Blueprints/Actors/BP_ProjectileBase.BP_ProjectileBase=0
 
 [PlacementMode]
 RecentlyPlaced=/Game/Blueprints/Pawns/BP_PawnTurret.BP_PawnTurret;
