# OnComponentHit now works on Projectiles and calls OnHit() function

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -100,7 +100,7 @@ bShowServerDebugDrawingByDefault=True
 ServerDebugDrawingColorTintStrength=0.000000
 ServerDebugDrawingColorTint=(R=0.000000,G=0.000000,B=0.000000,A=1.000000)
 ServerFixedFPS=0
-LastSize=(X=1280,Y=694)
+LastSize=(X=0,Y=0)
 NewWindowHeight=694
 MultipleInstancePositions=(X=43,Y=4)
 
@@ -1059,7 +1059,7 @@ AudioSynesthesiaEditor.TimeStamp=2021.02.20-18.00.06
 AudioSynesthesiaEditor.LastCompileMethod=Unknown
 InternationalizationSettings.TimeStamp=2021.02.20-17.10.16
 InternationalizationSettings.LastCompileMethod=Unknown
-ToonTanks.TimeStamp=2021.07.23-09.15.54
+ToonTanks.TimeStamp=2021.07.29-16.39.06
 ToonTanks.LastCompileMethod=Runtime
 BlueprintGraph.TimeStamp=2021.02.20-17.10.07
 BlueprintGraph.LastCompileMethod=Unknown
@@ -1774,8 +1774,8 @@ PawnTurret="\"Object.Components.CapsuleComp.Object.Shape.ShapeColor\" \"Object.C
 InputSettings="\"Object.Bindings.ActionMappings.ActionMappings[1]\" \"Object.Bindings.AxisMappings.AxisMappings[8]\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 Volume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-StaticMeshComponent="\"Object.Collision.BodyInstance\" "
-MeshComponent="\"Object.Collision.BodyInstance\" "
+StaticMeshComponent=
+MeshComponent=
 PrimitiveComponent=
 SceneComponent=
 ActorComponent=
@@ -1786,9 +1786,9 @@ ProjectileBase="\"Object.Components.ProjectileMesh.Object.Lighting.LightmassSett
 LastLogListing=MapCheck
 
 [ContentBrowserRecent]
-MRUItem0=/Game/Blueprints/Pawns/BP_PawnTank
-MRUItem1=/Game/Blueprints/Actors/BP_ProjectileBase
-MRUItem2=/Game/Blueprints/Pawns/BP_PawnTurret
+MRUItem0=/Game/Blueprints/Actors/BP_ProjectileBase
+MRUItem1=/Game/Blueprints/Pawns/BP_PawnTurret
+MRUItem2=/Game/Blueprints/Pawns/BP_PawnTank
 MRUItem3=/Game/Assets/Effects/P_HitEffect
 MRUItem4=/Game/Assets/Effects/P_DeathEffect
 
@@ -2024,9 +2024,9 @@ UdpMessagingSettings=InputSettings.Bindings.ActionMappings,InputSettings.Binding
 WmfMediaSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.RotateTurret,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,
 BP_PawnTank_C=BP_PawnTank_C.Physics.ConstraintsGroup,BP_PawnTank_C.Rendering.TextureStreaming,BP_PawnTank_C.Rendering.RayTracing,BP_PawnTank_C.Rendering.LOD,
 CapsuleComponent=
-BP_PawnTurret_C=
+BP_PawnTurret_C=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Rendering.RayTracing,
 RawInputSettings=InputSettings.Bindings.ActionMappings,InputSettings.Bindings.AxisMappings,InputSettings.Bindings.ActionMappings.Fire,InputSettings.Bindings.AxisMappings.MoveForward,InputSettings.Bindings.AxisMappings.Turn,InputSettings.Bindings.AxisMappings.RotateTurret,GameMapsSettings.DefaultModes.SelectedGameModeDetails,IOSRuntimeSettings.Build.Remote Build Options,
-StaticMeshComponent=StaticMeshComponent.Physics.ConstraintsGroup,StaticMeshComponent.Rendering.TextureStreaming,StaticMeshComponent.Rendering.LOD,StaticMeshComponent.Rendering.RayTracing,
+StaticMeshComponent=
 BP_ProjectileBase_C=BP_ProjectileBase_C.Physics.ConstraintsGroup,BP_ProjectileBase_C.Rendering.TextureStreaming,BP_ProjectileBase_C.Rendering.RayTracing,BP_ProjectileBase_C.Rendering.LOD,
 
 [AssetEditorToolkitTabLocation]
